[gd_scene load_steps=24 format=2]

[ext_resource path="res://Graphics/Menu/logo.png" type="Texture" id=1]
[ext_resource path="res://Graphics/Menu/logo_glow.png" type="Texture" id=2]
[ext_resource path="res://Graphics/Misc/big_glow.png" type="Texture" id=3]
[ext_resource path="res://Graphics/Menu/Buttons/Start/normal.png" type="Texture" id=4]
[ext_resource path="res://Graphics/Menu/Buttons/Start/mask.bmp" type="BitMap" id=5]
[ext_resource path="res://Scripts/Buttons/start.gd" type="Script" id=6]
[ext_resource path="res://Graphics/Menu/Buttons/Start/shadow.png" type="Texture" id=7]
[ext_resource path="res://Graphics/Menu/Buttons/Quit/normal.png" type="Texture" id=8]
[ext_resource path="res://Graphics/Menu/Buttons/Quit/mask.bmp" type="BitMap" id=9]
[ext_resource path="res://Scripts/Buttons/quit.gd" type="Script" id=10]
[ext_resource path="res://Graphics/Menu/Buttons/Quit/shadow.png" type="Texture" id=11]
[ext_resource path="res://Graphics/Menu/Buttons/SFX/normal.png" type="Texture" id=12]
[ext_resource path="res://Scripts/Buttons/sfx.gd" type="Script" id=13]
[ext_resource path="res://Graphics/Menu/Buttons/SFX/shadow.png" type="Texture" id=14]
[ext_resource path="res://Graphics/Menu/Buttons/Settings/settings.png" type="Texture" id=15]
[ext_resource path="res://Scripts/Buttons/settings.gd" type="Script" id=16]
[ext_resource path="res://Graphics/Menu/Buttons/Settings/shadow.png" type="Texture" id=17]

[sub_resource type="Animation" id=1]
resource_name = "tilt"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, -1.0 ]
}

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 1, 0, 0, 1, 0.287109, 0, 0, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.48745, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 2
emission_box_extents = Vector3( 960, 540, 1 )
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
initial_velocity_random = 1.0
angular_velocity = 720.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 1.0
linear_accel = 100.0
linear_accel_random = 1.0
damping = 195.3
damping_random = 1.0
scale = 8.0
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )
hue_variation = -0.28
hue_variation_random = 0.37

[node name="main_menu" type="Node2D"]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 480, 110 )
rotation = -0.0091125
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -240, -55 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
autoplay = "tilt"
anims/tilt = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Sprite"]
self_modulate = Color( 0.439216, 0, 0, 1 )
show_behind_parent = true
position = Vector2( 480.969, -7.43017 )
texture = ExtResource( 2 )
offset = Vector2( -480, 80 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.2, 0.2 )
motion_mirroring = Vector2( 1920, 1080 )

[node name="Particles2D" type="Particles2D" parent="ParallaxBackground/ParallaxLayer"]
self_modulate = Color( 1, 1, 1, 0.0666667 )
position = Vector2( 960, 540 )
amount = 128
lifetime = 4.0
preprocess = 4.0
speed_scale = 0.5
visibility_rect = Rect2( -923.64, -533.819, 1948.06, 1177.18 )
process_material = SubResource( 6 )
texture = ExtResource( 3 )

[node name="start" type="TextureButton" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 4 )
texture_click_mask = ExtResource( 5 )
script = ExtResource( 6 )

[node name="shadow" type="Sprite" parent="start"]
show_behind_parent = true
texture = ExtResource( 7 )
centered = false

[node name="quit" type="TextureButton" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 8 )
texture_click_mask = ExtResource( 9 )
script = ExtResource( 10 )

[node name="shadow" type="Sprite" parent="quit"]
show_behind_parent = true
texture = ExtResource( 11 )
centered = false

[node name="sfx" type="TextureButton" parent="."]
margin_left = 100.0
margin_top = 10.0
margin_right = 131.0
margin_bottom = 37.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 12 )
script = ExtResource( 13 )

[node name="shadow" type="Sprite" parent="sfx"]
show_behind_parent = true
texture = ExtResource( 14 )
centered = false

[node name="glow" type="Sprite" parent="sfx"]
self_modulate = Color( 1, 0.607843, 0, 0.14902 )
position = Vector2( 19.5, 11.5 )
texture = ExtResource( 3 )

[node name="settings" type="TextureButton" parent="."]
margin_left = 18.0
margin_top = 18.0
margin_right = 38.0
margin_bottom = 37.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 15 )
script = ExtResource( 16 )

[node name="shadow" type="Sprite" parent="settings"]
show_behind_parent = true
texture = ExtResource( 17 )
centered = false

[node name="glow" type="Sprite" parent="settings"]
self_modulate = Color( 1, 0.607843, 0, 0.14902 )
position = Vector2( 9, 7.5 )
texture = ExtResource( 3 )
[connection signal="mouse_entered" from="start" to="start" method="_on_start_mouse_entered"]
[connection signal="mouse_exited" from="start" to="start" method="_on_start_mouse_exited"]
[connection signal="mouse_entered" from="quit" to="quit" method="_on_quit_mouse_entered"]
[connection signal="mouse_exited" from="quit" to="quit" method="_on_quit_mouse_exited"]
[connection signal="pressed" from="quit" to="quit" method="_on_quit_pressed"]
[connection signal="mouse_entered" from="sfx" to="sfx" method="_on_sfx_mouse_entered"]
[connection signal="mouse_exited" from="sfx" to="sfx" method="_on_sfx_mouse_exited"]
[connection signal="mouse_entered" from="settings" to="settings" method="_on_settings_mouse_entered"]
[connection signal="mouse_exited" from="settings" to="settings" method="_on_settings_mouse_exited"]
